--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   },
+  "engines": {
+    "node": ">= 14 <15"
+  },
   "name": "firstbookapi",
   "version": "1.0.0",
   "main": "app.js",
